[gd_scene load_steps=5 format=3 uid="uid://cx5wcj8xo7mpv"]

[ext_resource type="Script" path="res://entities/interactable/powerup/speed.gd" id="1_on2w3"]
[ext_resource type="AudioStream" uid="uid://r5vbugg7xhw7" path="res://assets/audio/sfx/getpowerup.mp3" id="2_dd83a"]
[ext_resource type="Texture2D" uid="uid://jewcgw14b7vr" path="res://assets/objects/gord.png" id="2_vrej8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gr7ne"]
size = Vector2(413, 456)

[node name="Speed" type="StaticBody2D"]
scale = Vector2(0.072, 0.072)
script = ExtResource("1_on2w3")

[node name="GetPowerUpStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_dd83a")
volume_db = -25.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-7.62939e-06, 7.62939e-06)
scale = Vector2(1.18587, 1.18587)
texture = ExtResource("2_vrej8")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_gr7ne")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
